--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=basedb
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=basedb	
+DB_USERNAME=basedb
+DB_PASSWORD=basedb
 DB_PREFIX=
 
 BROADCAST_DRIVER=log
