--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=basedb	
+DB_DATABASE=safefile	
 DB_USERNAME=root
 DB_PASSWORD=
 DB_PREFIX=
