--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_DEBUG=true
 APP_KEY=lsXxrP1d6nUGpfGO6vQqezNy1KCuDD3o
 APP_URL=http://boilerplate.valet
 LOG_CHANNEL=stack
+APP_LOCALE=ms
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
