--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-APP_ENV=local
-APP_DEBUG=true
+APP_ENV=production
+APP_DEBUG=false
 APP_KEY=lsXxrP1d6nUGpfGO6vQqezNy1KCuDD3o
 APP_URL=http://boilerplate.valet
 LOG_CHANNEL=stack
@@ -8,8 +8,8 @@ APP_LOCALE=ms
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_DATABASE=safefile	
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sbextech_root
+DB_PASSWORD=sbe@2020
 DB_PREFIX=
 
 BROADCAST_DRIVER=log
