--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_LOCALE=ms
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=safefile	
+DB_DATABASE=sbextech_spbbk	
 DB_USERNAME=sbextech_root
 DB_PASSWORD=sbe@2020
 DB_PREFIX=
