--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 APP_ENV=production
 APP_DEBUG=false
 APP_KEY=lsXxrP1d6nUGpfGO6vQqezNy1KCuDD3o
-APP_URL=http://boilerplate.valet
+APP_URL=http://localhost
 LOG_CHANNEL=stack
 APP_LOCALE=ms
 
+DB_PORT=3306
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_DATABASE=sbextech_spbbk	
