--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,8 +1,9 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/sbextech/spbbk.sbextech.com/
+    - export DEPLOYPATH=/home/sbextech/spbbk.sbextech.com/safefile
     - /bin/cp -r * $DEPLOYPATH
     - /bin/cp -r ./public/* $DEPLOYPATH/public_html/
     - /bin/cp ./public/js/*.js $DEPLOYPATH/public_html/js
     - /bin/cp ./public/css/*.css $DEPLOYPATH/public_html/css
+    - /bin/php $DEPLOYPATH/artisan optimize
