--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ APP_LOCALE=ms
 DB_PORT=3306
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=sbextech_spbbk	
-DB_USERNAME=sbextech_root
-DB_PASSWORD=sbe@2020
+DB_DATABASE=spbbk	
+DB_USERNAME=admin
+DB_PASSWORD=teknoniaga2021
 DB_PREFIX=
 
 BROADCAST_DRIVER=log
