--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=production
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=lsXxrP1d6nUGpfGO6vQqezNy1KCuDD3o
 APP_URL=http://localhost
 LOG_CHANNEL=stack
