--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=production
 APP_DEBUG=true
 APP_KEY=lsXxrP1d6nUGpfGO6vQqezNy1KCuDD3o
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 LOG_CHANNEL=stack
 APP_LOCALE=ms
 
