--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=production
-APP_DEBUG=true
+APP_DEBUG=false
 APP_KEY=lsXxrP1d6nUGpfGO6vQqezNy1KCuDD3o
 APP_URL=http://127.0.0.1:8000
 LOG_CHANNEL=stack
